--- a/myproject/templates/root.html
+++ b/myproject/templates/root.html
@@ -11,8 +11,26 @@
     {% endblock %}
     {% block js %}
     {% endblock %}
+    {% load bootstrap5 %}
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
 </head>
 <body>
+<nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #e3f2fd;">
+  <div class="container-fluid">
+    <span class="navbar-brand mb-0 h1">Menu</span>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link active" aria-current="page" href="/">The Wall of Honor</a>
+        <a class="nav-link" href="/news">News</a>
+        <a class="nav-link" href="/news/create">Create news</a>
+      </div>
+    </div>
+  </div>
+</nav>
 {% block content %}
 {% endblock %}
 <footer>
